--- a/potency-html/index.html
+++ b/potency-html/index.html
@@ -161,7 +161,7 @@
                     <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 </ul>
-                
+                <img src="123" alt="">
             </div><!--  /.hamburger-footer -->
         </div><!--  /.hamburger-content -->
     </header><!-- /.site-header -->
