--- a/potency-html/index-02.html
+++ b/potency-html/index-02.html
@@ -159,7 +159,7 @@
             </div><!--  /.hamburger-footer -->
         </div><!--  /.hamburger-content -->
     </header><!-- /.site-header -->
-
+<img src="" alt="">
     <!-- Hero Block
     ================================================== --> 
     <section class="hero-block" id="hero-block">
