--- a/potency-html/index.html
+++ b/potency-html/index.html
@@ -123,7 +123,7 @@
                     <div class="menu-top-main">      
                         <ul class="mainmenu">
                             <li>
-                                <a href="#hero-block" class="active">Home</a>
+                                <a href="#hero-block" class="active">Главная</a>
                                 <ul class="sub-menu">
                                     <li><a href="index.html">Home one</a></li>
                                     <li><a href="index-02.html">Home two</a></li>
