--- a/potency-html/index-02.html
+++ b/potency-html/index-02.html
@@ -177,7 +177,7 @@
                                         <h4 class="hero-description">
                                             <span class="counting">1</span>
                                             <span class="hero-devider"></span>
-                                            <span class="title">Web Designer</span>
+                                            <span class="title">Веб-дизайнер</span>
                                         </h4><!--  /.hero-description -->
                                     </div><!--  /.hero-with-video -->
                                     <h2 class="hero-main-title mrb-60">We Are Creative <br>Design &amp; Development Studio</h2><!--  /.hero-main-title -->
