--- a/potency-html/index.html
+++ b/potency-html/index.html
@@ -178,7 +178,7 @@
                                     <h4 class="hero-description mrb-30">
                                         <span class="counting">1</span>
                                         <span class="hero-devider"></span>
-                                        <span class="title">Web Designer</span>
+                                        <span class="title">Создание и админмтрирование сайтов</span>
                                     </h4><!--  /.hero-description -->
                                     <h2 class="hero-main-title mrb-45">Creative <br>Design Studio</h2><!--  /.hero-main-title -->
                                     <a href="#" class="btn btn-main bg-hr-dv-orange color-white">Hire Us</a>
@@ -187,7 +187,7 @@
                                     <h4 class="hero-description mrb-30">
                                         <span class="counting">2</span>
                                         <span class="hero-devider"></span>
-                                        <span class="title">Photographer</span>
+                                        <span class="title">Настройка рекламы</span>
                                     </h4><!--  /.hero-description -->
                                     <h2 class="hero-main-title mrb-45">Creative <br>Design Studio</h2><!--  /.hero-main-title -->
                                     <a href="#" class="btn btn-main bg-hr-dv-orange color-white">Hire Us</a>
